Remove Quarkus integration and related files
Eliminated all Quarkus-related dependencies, configurations, and Docker files. Deleted Quarkus-specific tests, properties, and documentation to streamline the codebase. This change simplifies project setup by removing unnecessary complexity.